infra/user-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mvc-k8s-user
  labels:
    app: user
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user
  template:
    metadata:
      labels:
        app: user
    spec:
      containers:
        - name: mvc-k8s-user-node
          image: mvc-k8s-user:latest
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "1500Mi"
              cpu: "1000m"
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
spec:
  selector:
    app: user
  ports:
    - protocol: TCP
      port: 3333
      targetPort: 3333
